--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -608,7 +608,7 @@ sup {
 
 .card_bg_img-s {
     background-image: url(../images/card_bg_img.svg);
-    background-size: 86%;
+    background-size: 60%;
     background-repeat: no-repeat;
     background-position: center;
     overflow-x: hidden;
@@ -790,6 +790,19 @@ sup {
     color: #212121;
 }
 
+.active_position-s {
+    width: 223px !important;
+    font-size: 18px !important;
+    color: black !important;
+    border: 2px solid green !important;
+}
+
+.player_position_button-s:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+
 .player_position_button-s:hover {
     width: 223px !important;
     font-size: 18px !important;
@@ -847,6 +860,11 @@ sup {
 
 .br_green_on_hover-s:active,
 .br_green_on_hover-s:hover {
+    border: 2px solid #006400 !important;
+    color: black !important;
+}
+
+.br_green_on_hover_active-s {
     border: 2px solid #006400 !important;
     color: black !important;
 }
@@ -1458,7 +1476,6 @@ output:after {
 /*notification button end*/
 
 
-<<<<<<< HEAD
 /* ----- MINA WORK - END ----- */
 
 
@@ -1611,25 +1628,24 @@ output:after {
 .w_10px-s {
     width: 10px !important;
 }
-=======
-.border_grey-s{
-    border: 2px solid rgba(0 ,0 , 0 ,18%);
+
+.border_grey-s {
+    border: 2px solid rgba(0, 0, 0, 18%);
 }
 
-.h_444px-s{
+.h_444px-s {
     height: 444px;
 }
 
-.fs_10px-s{
+.fs_10px-s {
     font-size: 10px
 }
 
-
-.w_90-s{
+.w_90-s {
     width: 90%;
 }
 
-.invitation_location-s{
+.invitation_location-s {
     background-color: #006400;
     background-image: url("../images/map_footbal.png");
     background-repeat: no-repeat;
@@ -1638,8 +1654,6 @@ output:after {
     border-radius: 15px;
 }
 
-.h_674px-s{
+.h_674px-s {
     height: 674px;
 }
-/* ----- MINA WORK - END ----- */
->>>>>>> 240405072819c6c1ef9c4e490f60e30773c7e20d
