--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,13 +84,13 @@
 .carousel-inner {
     position: relative;
     overflow: hidden;
-    left: 20%;
+    left: 29%;
     top: 7px;
-    width: 74%;
+    width: 60%;
 }
 
 .w_500px-s {
-    width: 500px;
+    width: 680px;
 }
 
 .carousel-indicators li {
@@ -829,17 +829,6 @@ sup {
 }
 
 
-/* .change_color_of_nav_icon-s img {
-    filter: invert(0%) grayscale(10%) sepia(79%) saturate(0%) hue-rotate(112deg) brightness(161%) contrast(100%);
-} */
-
-
-/* .change_color_of_nav_icon-s img {
-    -webkit-filter: grayscale(10%);
-    filter: grayscale(10%);
-} */
-
-
 /* ----- USMAN WORK - END ----- */
 
 
@@ -1486,14 +1475,19 @@ output:after {
     opacity: 0.4;
 }
 
+.tab_text {
+    border-bottom: 2px solid #212121 !important;
+    opacity: 0.4;
+}
+
 .performance_text a {
     color: #212121;
     font-family: Roboto;
     text-transform: capitalize;
-    font-size: 1.8rem;
+    font-size: 18px;
     font-weight: 600;
     text-decoration: none;
-    /* border-bottom: 2px solid #006400; */
+    border-bottom: 2px solid #006400;
 }
 
 .performance_text p {
@@ -1659,7 +1653,7 @@ output:after {
 }
 
 .stadium_img {
-    height: 100%;
+    height: 92%;
 }
 
 .br_8px-s {
@@ -1714,3 +1708,55 @@ output:after {
 
 
 /* ----- MINA WORK - END ----- */
+
+
+/* testing purpose */
+
+nav>.nav.nav-tabs {
+    border: none;
+    color: #fff;
+    background: #272e38;
+    border-radius: 0;
+}
+
+nav>div a.nav-item.nav-link,
+nav>div a.nav-item.nav-link.active {
+    border: none;
+    padding: 18px 25px;
+    color: #fff;
+    background: #272e38;
+    border-radius: 0;
+}
+
+nav>div a.nav-item.nav-link.active:after {
+    content: "";
+    position: relative;
+    bottom: -60px;
+    left: -10%;
+    border: 15px solid transparent;
+    /* border-top-color: #e74c3c; */
+}
+
+.tab-content {
+    background: #fdfdfd;
+    line-height: 25px;
+    border: 1px solid #ddd;
+    /* border-top: 5px solid #e74c3c; */
+    /* border-bottom: 5px solid #e74c3c; */
+    padding: 30px 25px;
+}
+
+nav>div a.nav-item.nav-link:hover,
+nav>div a.nav-item.nav-link:focus {
+    border: none;
+    /* background: #e74c3c; */
+    color: #fff;
+    border-radius: 0;
+    transition: background 0.20s linear;
+}
+
+.position_video_play_icon-s {
+    position: absolute;
+    right: 145px;
+    top: 119px;
+}
