--- a/assets/css/mina.css
+++ b/assets/css/mina.css
@@ -1,163 +1,158 @@
-.bg_green-s{
+.bg_green-s {
     background-color: #006400;
 }
 
-.fg_green-s{
+.fg_green-s {
     color: #006400;
 }
 
-.background_img-s{
-    background-image:url(../images/Football.svg), url(../images/Black_Bg.svg);
+.background_img-s {
+    background-image: url(../images/Football.svg), url(../images/Black_Bg.svg);
     /* Full height */
     height: 90vh;
     /* Center and scale the image nicely */
-    background-position:top left, right;
-    background-size:30%, 75%;
+    background-position: top left, right;
+    background-size: 30%, 75%;
     background-repeat: no-repeat, repeat-y;
-
 }
 
 @media screen and (max-width:1440px) {
-    .background_img-s{
-        background-image:url(../images/Football.svg), url(../images/Black_Bg.svg);
+    .background_img-s {
+        background-image: url(../images/Football.svg), url(../images/Black_Bg.svg);
         /* Full height */
         height: 90vh;
         /* Center and scale the image nicely */
-        background-position:top left, right;
-        background-size:33%, 75%;
+        background-position: top left, right;
+        background-size: 35%, 75%;
         background-repeat: no-repeat, repeat-y;
-    
     }
 }
 
 @media screen and (max-width:1024px) {
-    .background_img-s{
+    .background_img-s {
         background: url(../images/fb.png), url(../images/Black_Bg.svg);
         /* Full height */
         height: 100vh;
         /* Center and scale the image nicely */
-        background-position:left top,  right ;
-        background-size:39%,  69%;
-        background-repeat:no-repeat, repeat-y;
-    
+        background-position: left top, right;
+        background-size: 39%, 69%;
+        background-repeat: no-repeat, repeat-y;
     }
 }
 
 @media screen and (max-width:768px) {
-    .background_img-s{
+    .background_img-s {
         background: url(../images/fb.png), url(../images/Black_Bg.svg);
         /* Full height */
         height: 100vh;
         /* Center and scale the image nicely */
-        background-position:left top,  right ;
-        background-size:35%, 71%;
-        background-repeat:no-repeat, repeat-y;
-    
+        background-position: left top, right;
+        background-size: 35%, 71%;
+        background-repeat: no-repeat, repeat-y;
     }
 }
 
 @media screen and (max-width:425px) {
-    .background_img-s{
+    .background_img-s {
         background: url(../images/fb.png), url(../images/White_bg.svg), url(../images/Black_Bg.svg);
         /* Full height */
         height: 100vh;
         /* Center and scale the image nicely */
-        background-position:left top, left top, right ;
-        background-size:55%, 33%,  133%;
-        background-repeat:no-repeat, no-repeat, repeat;
+        background-position: left top, left top, right;
+        background-size: 55%, 33%, 133%;
+        background-repeat: no-repeat, no-repeat, repeat;
     }
-    .text_sm_white-s{
+    .text_sm_white-s {
         color: white !important;
     }
-}
-
-@media screen and (max-width:320px) {
-    .background_img-s{
-        background: url(../images/fb.png), url(../images/White_bg.svg), url(../images/Black_Bg.svg);
-        /* Full height */
-        height: 100vh;
-        /* Center and scale the image nicely */
-        background-position:left top, left top, right ;
-        background-size:61%, 33%,  133%;
-        background-repeat:no-repeat, no-repeat, repeat;
-    }
-
-    .fs_15px-s{
+    .fs_15px-s {
         font-size: 15px;
     }
 }
 
-.fs_19px-s{
+@media screen and (max-width:320px) {
+    .background_img-s {
+        background: url(../images/fb.png), url(../images/White_bg.svg), url(../images/Black_Bg.svg);
+        /* Full height */
+        height: 100vh;
+        /* Center and scale the image nicely */
+        background-position: left top, left top, right;
+        background-size: 61%, 33%, 133%;
+        background-repeat: no-repeat, no-repeat, repeat;
+    }
+    .fs_15px-s {
+        font-size: 15px;
+    }
+}
+
+.fs_19px-s {
     font-size: 19px;
 }
 
 .green_bottom_on_hover-s:hover,
-.green_bottom_on_hover-s.active{
+.green_bottom_on_hover-s.active {
     border-bottom: 5px solid #348734;
     width: 60%;
     border-radius: 4px;
 }
 
-.fg_light_green-s{
+.fg_light_green-s {
     color: #349434;
 }
 
-.fs_90px-s{
+.fs_90px-s {
     font-size: 90px;
 }
 
-.fs_40px-s{
+.fs_40px-s {
     font-size: 40px;
 }
 
-.opacity_60-s{
+.opacity_60-s {
     opacity: 0.6;
 }
 
-.fg_dark_green-s{
+.fg_dark_green-s {
     color: #358734;
 }
 
-.br_10px-s{
+.br_10px-s {
     border-radius: 10px;
 }
 
-.logo_text-s{
+.logo_text-s {
     top: 31%;
     left: 42px;
-    
 }
 
-.bg_grey-s{
+.bg_grey-s {
     background-color: #E5EEE7;
 }
 
-
 @media screen and (max-width:768px) {
-    .w_78_for_md-s{
+    .w_78_for_md-s {
         width: 78% !important;
     }
 }
 
-
 @media screen and (max-width:425px) {
-    .fs_small_for_sm-s{
+    .fs_small_for_sm-s {
         font-size: small;
     }
 }
 
 @media screen and (max-width:1024px) {
-    .navbar_collapse-s{
+    .navbar_collapse-s {
         background-color: black !important;
     }
 }
 
-.br_up_left_right_10px-s{
+.br_up_left_right_10px-s {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-.bg_filter_img-s{
+.bg_filter_img-s {
     background-image: url(../images/filter.svg);
     background-repeat: no-repeat;
     background-position: right top;
@@ -165,51 +160,51 @@
     opacity: .4;
 }
 
-.star_img-s{
+.star_img-s {
     width: 10px;
 }
 
-.fs_10px-s{
+.fs_10px-s {
     font-size: 10px;
 }
 
-.fg_yellow-s{
+.fg_yellow-s {
     color: #EAC600;
 }
 
-.opacity_4-s{
+.opacity_4-s {
     opacity: .4;
 }
 
-.field input{
+.field input {
     position: absolute;
 }
 
 @media screen and (max-width:425px) {
-    .fs_39px_on_sm-s{
+    .fs_39px_on_sm-s {
         font-size: 37px !important;
     }
 }
+
 @media screen and (max-width:375px) {
-    .fs_39px_on_sm-s{
+    .fs_39px_on_sm-s {
         font-size: 32px !important;
     }
 }
 
 @media screen and (max-width:320px) {
-    .fs_39px_on_sm-s{
+    .fs_39px_on_sm-s {
         font-size: 27px !important;
     }
 }
 
-.b_5px-s{
+.b_5px-s {
     border: 5px solid white;
 }
 
-.fg_light_grey-s{
+.fg_light_grey-s {
     color: #bdc5bf;
 }
-
 
 .code_border-s {
     border: 1px solid #E5EEE7;
@@ -220,7 +215,7 @@
     background-color: #E5EEE7;
 }
 
-.fs_30px-s{
+.fs_30px-s {
     font-size: 30px;
 }
 
@@ -232,6 +227,6 @@
     opacity: 0.4 !important;
 }
 
-.font_family_roboto-s{
+.font_family_roboto-s {
     font-family: roboto;
 }
