--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,13 +84,13 @@
 .carousel-inner {
     position: relative;
     overflow: hidden;
-    left: 20%;
+    left: 29%;
     top: 7px;
-    width: 74%;
+    width: 60%;
 }
 
 .w_500px-s {
-    width: 500px;
+    width: 680px;
 }
 
 .carousel-indicators li {
@@ -162,6 +162,14 @@
 .rating_textt {
     color: #ffffff !important;
     font-size: 1.125rem !important;
+    word-spacing: 0.5rem;
+    float: right;
+    font-weight: 600;
+}
+
+.rating_textt-s {
+    color: #ffffff !important;
+    font-size: 42px !important;
     word-spacing: 0.5rem;
     float: right;
     font-weight: 600;
@@ -600,7 +608,7 @@ sup {
 
 .card_bg_img-s {
     background-image: url(../images/card_bg_img.svg);
-    background-size: 86%;
+    /* background-size: 60%; */
     background-repeat: no-repeat;
     background-position: center;
     overflow-x: hidden;
@@ -753,6 +761,10 @@ sup {
     border: 1px solid #006400;
 }
 
+.br_on_active-s {
+    border: 1px solid #006400;
+}
+
 .min_w_315px-s {
     min-width: 453px !important;
     right: 0 !important;
@@ -760,7 +772,7 @@ sup {
 }
 
 .bg_lightgrey-s {
-    background-color: #F3F3F3;
+    background-color: #F3F3F3 !important;
 }
 
 .text_lightdark-s {
@@ -779,7 +791,20 @@ sup {
 .player_position_button-s {
     width: 223px !important;
     font-size: 18px !important;
-    color: #212121;
+    color: #212121 !important;
+}
+
+.active_position-s {
+    width: 223px !important;
+    font-size: 18px !important;
+    color: black !important;
+    border: 2px solid green !important;
+}
+
+.player_position_button-s:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
 }
 
 .player_position_button-s:hover {
@@ -787,6 +812,20 @@ sup {
     font-size: 18px !important;
     color: #212121;
     border: 2px solid green;
+}
+
+@media screen and (max-width:425px) {
+    .player_position_button-s {
+        width: 100% !important;
+        font-size: 18px !important;
+        color: #212121;
+    }
+    .player_position_button-s:hover {
+        width: 100% !important;
+        font-size: 18px !important;
+        color: #212121;
+        border: 2px solid green;
+    }
 }
 
 .player_position_button-s:hover span {
@@ -806,17 +845,6 @@ sup {
 .w_chat_read_icon-s {
     width: 10px;
 }
-
-
-/* .change_color_of_nav_icon-s img {
-    filter: invert(0%) grayscale(10%) sepia(79%) saturate(0%) hue-rotate(112deg) brightness(161%) contrast(100%);
-} */
-
-
-/* .change_color_of_nav_icon-s img {
-    -webkit-filter: grayscale(10%);
-    filter: grayscale(10%);
-} */
 
 
 /* ----- USMAN WORK - END ----- */
@@ -839,6 +867,11 @@ sup {
 
 .br_green_on_hover-s:active,
 .br_green_on_hover-s:hover {
+    border: 2px solid #006400 !important;
+    color: black !important;
+}
+
+.br_green_on_hover_active-s {
     border: 2px solid #006400 !important;
     color: black !important;
 }
@@ -1030,10 +1063,9 @@ input:checked+.slider:before {
         bottom: 0;
         left: 54%;
     }
-
-    .bg_filter_location_img-s{
+    .bg_filter_location_img-s {
         background-size: 79% !important;
-    /* opacity: .4; */
+        /* opacity: .4; */
     }
 }
 
@@ -1042,10 +1074,9 @@ input:checked+.slider:before {
         bottom: 0;
         left: 57%;
     }
-
-    .bg_filter_location_img-s{
+    .bg_filter_location_img-s {
         background-size: 98% !important;
-    /* opacity: .4; */
+        /* opacity: .4; */
     }
 }
 
@@ -1347,8 +1378,8 @@ output:after {
     border-bottom-right-radius: 10px;
 }
 
-.h_346px-s {
-    height: 346px;
+.h_452px-s {
+    height: 452px;
 }
 
 .close_modal-s {
@@ -1376,14 +1407,13 @@ output:after {
         right: -24px;
         bottom: -33px;
     }
-
     .wrapper {
         right: 11px;
         bottom: 97px;
     }
 }
 
-.filter_location-s{
+.filter_location-s {
     background-color: #006400;
     background-image: url("../images/map_footbal.png");
     background-repeat: no-repeat;
@@ -1392,34 +1422,33 @@ output:after {
     border-radius: 15px;
 }
 
-.location_card-s{
+.location_card-s {
     bottom: 2%;
     border-radius: 1.2rem;
 }
 
-
-.fg_white-s{
+.fg_white-s {
     color: white !important;
 }
 
-.heart_position-s{
-    top: 0 ;
-    right: 0 ;
+.heart_position-s {
+    top: 0;
+    right: 0;
 }
 
-.fs_8px-s{
+.fs_8px-s {
     font-size: 8px;
 }
 
-.fs_9px-s{
+.fs_9px-s {
     font-size: 9px;
 }
 
-.mt_-29px-s{
+.mt_-29px-s {
     margin-top: -43px;
 }
 
-.location_heart-s{
+.location_heart-s {
     position: absolute !important;
     right: 0;
     top: 0;
@@ -1430,19 +1459,18 @@ output:after {
     color: white !important;
 }
 
-.fs_20px-s{
+.fs_20px-s {
     font-size: 20px;
 }
 
-
 @media screen and (min-width:1024px) {
-    .postion_absolute_on_lg-s{
+    .postion_absolute_on_lg-s {
         position: absolute;
         bottom: 0;
     }
 }
 
-.bg_filter_location_img-s{
+.bg_filter_location_img-s {
     background-image: url(../images/filter_img.svg);
     background-repeat: no-repeat;
     background-position: right top;
@@ -1450,27 +1478,188 @@ output:after {
     background-size: 48%;
     /* opacity: .4; */
 }
+
+
 /*notification button end*/
 
 
-.border_grey-s{
-    border: 2px solid rgba(0 ,0 , 0 ,18%);
+/* ----- MINA WORK - END ----- */
+
+
+/* sultan work necessary */
+
+.performance_text {
+    border-bottom: 2px solid #006400 !important;
+    color: black !important;
+    font-weight: bold !important;
 }
 
-.h_444px-s{
-    height: 444px;
+.tab_text {
+    border-bottom: 2px solid #212121 !important;
+    opacity: 0.4;
 }
 
-.fs_10px-s{
+.performance_text a {
+    color: dark;
+    font-family: Roboto;
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 600;
+    text-decoration: none;
+    /* opacity: 0.4 !important; */
+    /* border-bottom: 2px solid #006400; */
+}
+
+.performance_text p {
+    margin-right: 3rem;
+}
+
+.home-img-block {
+    width: 33.33%;
+    display: inline-block;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+}
+
+.home-img-block:hover:after {
+    opacity: 1;
+}
+
+.home-img-block img {
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
+    transition: all 1s ease;
+    width: 100%;
+}
+
+.home-img-block:hover img {
+    -webkit-transform: scale(1.25);
+    /* Safari and Chrome */
+    -moz-transform: scale(1.25);
+    /* Firefox */
+    -ms-transform: scale(1.25);
+    /* IE 9 */
+    -o-transform: scale(1.25);
+    /* Opera */
+    transform: scale(1.25);
+    background: rgba(0, 0, 0, 0.8);
+    max-height: 100%;
+}
+
+.home-img-block:after {
+    background: rgba(0, 0, 0, .6);
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
+    transition: all 1s ease;
+}
+
+.hover {
+    position: absolute;
+    z-index: 99;
+    top: 87%;
+    left: 50%;
+    width: 84%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
+    transition: all 1s ease;
+}
+
+.hover .profile_text_on_img_hover-s {
+    color: #fff;
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
+    transition: all 1s ease;
+}
+
+.hover span {
+    color: #fff;
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
+    transition: all 1s ease;
+}
+
+.home-img-block:hover:after,
+.home-img-block:hover .hover,
+.home-img-block:hover .hover .profile_text_on_img_hover-s,
+.home-img-block:hover .hover span {
+    opacity: 1;
+}
+
+.w_20px-s {
+    width: 13px !important;
+}
+
+.fs_10px-s {
     font-size: 10px
 }
 
+.w_11px-s {
+    width: 11px !important;
+}
 
-.w_90-s{
+.w_10px-s {
+    width: 10px !important;
+}
+
+.border_grey-s {
+    border: 2px solid rgba(0, 0, 0, 18%);
+}
+
+.h_444px-s {
+    height: 444px;
+}
+
+.fs_10px-s {
+    font-size: 10px
+}
+
+.w_90-s {
     width: 90%;
 }
 
-.invitation_location-s{
+.invitation_location-s {
     background-color: #006400;
     background-image: url("../images/map_footbal.png");
     background-repeat: no-repeat;
@@ -1479,8 +1668,177 @@ output:after {
     border-radius: 15px;
 }
 
-.h_674px-s{
+.h_674px-s {
     height: 674px;
 }
+
+.stadium_img {
+    height: 92%;
+}
+
+.br_8px-s {
+    border-radius: 8px;
+}
+
+.rating_bg-s {
+    background-color: #f8f8f8;
+}
+
+.br_20px-s {
+    border-radius: 20px;
+}
+
+.h_58px-s {
+    height: 58px;
+}
+
+.h_100-s {
+    height: 100%;
+}
+
+.caption-s {
+    bottom: 0;
+}
+
+.post_footer-s {
+    bottom: 0;
+    width: 94%;
+}
+
+@media screen and (max-width:1024px) {
+    .post_footer-s {
+        bottom: 0;
+        width: 92%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .post_footer-s {
+        bottom: 0;
+        width: 94%;
+    }
+}
+
+@media screen and (max-width:1024px) {
+    .post_footer-s {
+        bottom: 0;
+        width: 92%;
+    }
+}
+
+
 /* ----- MINA WORK - END ----- */
 
+
+/* further work   */
+
+.position_video_play_icon-s {
+    position: absolute;
+    top: 38%;
+    left: 37%;
+    width: 25% !important;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+
+/* .rating_value-s{
+    position: relative;
+    width: 100%;
+} */
+
+.lower_value-s {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.lower_value-s .rating_value-s {
+    position: absolute;
+    top: -37px;
+}
+
+.lower_value-s .rating_value-s::after {
+    position: absolute;
+    content: "";
+    top: -37px;
+}
+
+.fs_30px-s {
+    font-size: 30px;
+}
+
+.bg_stadium_img-s {
+    background-image: url(../images/location_circle.svg);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-blend-mode: overlay;
+    background-size: 11%;
+    /* opacity: .4; */
+}
+
+
+/* ----- MINA WORK - END ----- */
+
+@media screen and (max-width: 786px) {
+    .ft_on_sm_screen-s {
+        font-size: 15px !important;
+    }
+    .carousel-inner {
+        position: relative;
+        overflow: hidden;
+        left: 22%;
+        top: 7px;
+        width: 60%;
+    }
+    .carousel-control-next,
+    .carousel-control-prev {
+        width: 7%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .ft_on_sm_screen-s {
+        font-size: 9px !important;
+    }
+    .image_width_for_profile_card-s {
+        width: 50px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .h_674px-s {
+        height: 727px;
+    }
+    .fs_sm_10px_invitation-s {
+        font-size: 10px;
+    }
+    .stadium_img {
+        height: 83%;
+    }
+}
+
+.mt_68px-s {
+    margin-top: 68px;
+}
+
+@media screen and (max-width:320px) {
+    .fs_sm_21px-s{
+        font-size: 21px;
+    }
+ 
+}
+.btn:focus{
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
