chat update fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -741,6 +741,10 @@ sup {
     resize: none;
 }
 
+textarea.form-control {
+    height: 0px;
+}
+
 .br_right_10px-s {
     border-radius: 0px 0px 10px 10px;
 }
